build/log/idf_py_stdout_output_15736
[0/1] Re-running CMake...
-- Component directory C:/git/esp-idf/components/esp_coex does not contain a CMakeLists.txt file. No component will be added
-- ccache will be used for faster recompilation
-- Project is not inside a git repository, or git repository has no commits; will not use 'git describe' to determine PROJECT_VER.
-- Building ESP-IDF components for target esp32
NOTICE: Processing 2 dependencies:
NOTICE: [1/2] someweisguy/esp_dmx (9b6a5043add89038388d93ebe77109eb3368bb51)
NOTICE: [2/2] idf (5.0.0)
-- Project sdkconfig file D:/git/ESPIDF-UDP2DMX/sdkconfig
-- App "UDP2DMX" version: 1
-- Adding linker script D:/git/ESPIDF-UDP2DMX/build/esp-idf/esp_system/ld/memory.ld
-- Adding linker script C:/git/esp-idf/components/esp_system/ld/esp32/sections.ld.in
-- Adding linker script C:/git/esp-idf/components/esp_rom/esp32/ld/esp32.rom.ld
-- Adding linker script C:/git/esp-idf/components/esp_rom/esp32/ld/esp32.rom.api.ld
-- Adding linker script C:/git/esp-idf/components/esp_rom/esp32/ld/esp32.rom.libgcc.ld
-- Adding linker script C:/git/esp-idf/components/esp_rom/esp32/ld/esp32.rom.newlib-data.ld
-- Adding linker script C:/git/esp-idf/components/esp_rom/esp32/ld/esp32.rom.syscalls.ld
-- Adding linker script C:/git/esp-idf/components/esp_rom/esp32/ld/esp32.rom.newlib-funcs.ld
-- Adding linker script C:/git/esp-idf/components/soc/esp32/ld/esp32.peripherals.ld
-- Components: app_trace app_update bootloader bootloader_support bt cmock console cxx driver efuse esp-tls esp_adc esp_app_format esp_common esp_eth esp_event esp_gdbstub esp_hid esp_http_client esp_http_server esp_https_ota esp_https_server esp_hw_support esp_lcd esp_local_ctrl esp_netif esp_partition esp_phy esp_pm esp_psram esp_ringbuf esp_rom esp_system esp_timer esp_wifi espcoredump esptool_py fatfs freertos hal heap http_parser idf_test ieee802154 json log lwip main mbedtls mqtt newlib nvs_flash openthread partition_table perfmon protobuf-c protocol_examples_common protocomm pthread sdmmc soc someweisguy__esp_dmx spi_flash spiffs tcp_transport ulp unity usb vfs wear_levelling wifi_provisioning wpa_supplicant xtensa
-- Component paths: C:/git/esp-idf/components/app_trace C:/git/esp-idf/components/app_update C:/git/esp-idf/components/bootloader C:/git/esp-idf/components/bootloader_support C:/git/esp-idf/components/bt C:/git/esp-idf/components/cmock C:/git/esp-idf/components/console C:/git/esp-idf/components/cxx C:/git/esp-idf/components/driver C:/git/esp-idf/components/efuse C:/git/esp-idf/components/esp-tls C:/git/esp-idf/components/esp_adc C:/git/esp-idf/components/esp_app_format C:/git/esp-idf/components/esp_common C:/git/esp-idf/components/esp_eth C:/git/esp-idf/components/esp_event C:/git/esp-idf/components/esp_gdbstub C:/git/esp-idf/components/esp_hid C:/git/esp-idf/components/esp_http_client C:/git/esp-idf/components/esp_http_server C:/git/esp-idf/components/esp_https_ota C:/git/esp-idf/components/esp_https_server C:/git/esp-idf/components/esp_hw_support C:/git/esp-idf/components/esp_lcd C:/git/esp-idf/components/esp_local_ctrl C:/git/esp-idf/components/esp_netif C:/git/esp-idf/components/esp_partition C:/git/esp-idf/components/esp_phy C:/git/esp-idf/components/esp_pm C:/git/esp-idf/components/esp_psram C:/git/esp-idf/components/esp_ringbuf C:/git/esp-idf/components/esp_rom C:/git/esp-idf/components/esp_system C:/git/esp-idf/components/esp_timer C:/git/esp-idf/components/esp_wifi C:/git/esp-idf/components/espcoredump C:/git/esp-idf/components/esptool_py C:/git/esp-idf/components/fatfs C:/git/esp-idf/components/freertos C:/git/esp-idf/components/hal C:/git/esp-idf/components/heap C:/git/esp-idf/components/http_parser C:/git/esp-idf/components/idf_test C:/git/esp-idf/components/ieee802154 C:/git/esp-idf/components/json C:/git/esp-idf/components/log C:/git/esp-idf/components/lwip D:/git/ESPIDF-UDP2DMX/main C:/git/esp-idf/components/mbedtls C:/git/esp-idf/components/mqtt C:/git/esp-idf/components/newlib C:/git/esp-idf/components/nvs_flash C:/git/esp-idf/components/openthread C:/git/esp-idf/components/partition_table C:/git/esp-idf/components/perfmon C:/git/esp-idf/components/protobuf-c C:/git/esp-idf/examples/common_components/protocol_examples_common C:/git/esp-idf/components/protocomm C:/git/esp-idf/components/pthread C:/git/esp-idf/components/sdmmc C:/git/esp-idf/components/soc D:/git/ESPIDF-UDP2DMX/managed_components/someweisguy__esp_dmx C:/git/esp-idf/components/spi_flash C:/git/esp-idf/components/spiffs C:/git/esp-idf/components/tcp_transport C:/git/esp-idf/components/ulp C:/git/esp-idf/components/unity C:/git/esp-idf/components/usb C:/git/esp-idf/components/vfs C:/git/esp-idf/components/wear_levelling C:/git/esp-idf/components/wifi_provisioning C:/git/esp-idf/components/wpa_supplicant C:/git/esp-idf/components/xtensa
-- Configuring done
-- Generating done
-- Build files have been written to: D:/git/ESPIDF-UDP2DMX/build
[1/11] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D D:\git\ESPIDF-UDP2DMX\build\bootloader\esp-idf\esptool_py && C:\Users\kdros\.espressif\python_env\idf5.0_py3.10_env\Scripts\python.exe C:/git/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 D:/git/ESPIDF-UDP2DMX/build/bootloader/bootloader.bin"
Bootloader binary size 0x6390 bytes. 0xc70 bytes (11%) free.
[2/9] Linking C static library esp-idf\wpa_supplicant\libwpa_supplicant.a
[3/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
ccache C:\Users\kdros\.espressif\tools\xtensa-esp32-elf\esp-2022r1-11.2.0\xtensa-esp32-elf\bin\xtensa-esp32-elf-gcc.exe  -ID:/git/ESPIDF-UDP2DMX/build/config -ID:/git/ESPIDF-UDP2DMX/main -IC:/git/esp-idf/components/newlib/platform_include -IC:/git/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/git/esp-idf/components/freertos/esp_additions/include/freertos -IC:/git/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/git/esp-idf/components/freertos/esp_additions/include -IC:/git/esp-idf/components/esp_hw_support/include -IC:/git/esp-idf/components/esp_hw_support/include/soc -IC:/git/esp-idf/components/esp_hw_support/include/soc/esp32 -IC:/git/esp-idf/components/esp_hw_support/port/esp32/. -IC:/git/esp-idf/components/esp_hw_support/port/esp32/private_include -IC:/git/esp-idf/components/heap/include -IC:/git/esp-idf/components/log/include -IC:/git/esp-idf/components/soc/include -IC:/git/esp-idf/components/soc/esp32/. -IC:/git/esp-idf/components/soc/esp32/include -IC:/git/esp-idf/components/hal/esp32/include -IC:/git/esp-idf/components/hal/include -IC:/git/esp-idf/components/hal/platform_port/include -IC:/git/esp-idf/components/esp_rom/include -IC:/git/esp-idf/components/esp_rom/include/esp32 -IC:/git/esp-idf/components/esp_rom/esp32 -IC:/git/esp-idf/components/esp_common/include -IC:/git/esp-idf/components/esp_system/include -IC:/git/esp-idf/components/esp_system/port/soc -IC:/git/esp-idf/components/esp_system/port/include/private -IC:/git/esp-idf/components/xtensa/include -IC:/git/esp-idf/components/xtensa/esp32/include -IC:/git/esp-idf/components/lwip/include -IC:/git/esp-idf/components/lwip/include/apps -IC:/git/esp-idf/components/lwip/include/apps/sntp -IC:/git/esp-idf/components/lwip/lwip/src/include -IC:/git/esp-idf/components/lwip/port/esp32/include -IC:/git/esp-idf/components/lwip/port/esp32/include/arch -IC:/git/esp-idf/components/esp_event/include -IC:/git/esp-idf/components/esp_netif/include -IC:/git/esp-idf/components/driver/include -IC:/git/esp-idf/components/driver/deprecated -IC:/git/esp-idf/components/driver/esp32/include -IC:/git/esp-idf/components/esp_pm/include -IC:/git/esp-idf/components/esp_ringbuf/include -IC:/git/esp-idf/components/nvs_flash/include -IC:/git/esp-idf/components/esp_partition/include -IC:/git/esp-idf/examples/common_components/protocol_examples_common/include -ID:/git/ESPIDF-UDP2DMX/managed_components/someweisguy__esp_dmx/src -IC:/git/esp-idf/components/esp_timer/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=D:/git/ESPIDF-UDP2DMX=. -fmacro-prefix-map=C:/git/esp-idf=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.0\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c D:/git/ESPIDF-UDP2DMX/main/main.c
D:/git/ESPIDF-UDP2DMX/main/main.c: In function 'udp_server_task':
D:/git/ESPIDF-UDP2DMX/main/main.c:196:19: warning: unused variable 'arg3' [-Wunused-variable]
  196 |             char *arg3 = strtok(NULL, "#");
      |                   ^~~~
D:/git/ESPIDF-UDP2DMX/main/main.c:292:5: error: expected declaration or statement at end of input
  292 |     }
      |     ^
At top level:
D:/git/ESPIDF-UDP2DMX/main/main.c:250:10: warning: 'app_main' defined but not used [-Wunused-function]
  250 |     void app_main()
      |          ^~~~~~~~
[4/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main-1channel-working.c.obj
D:/git/ESPIDF-UDP2DMX/main/main-1channel-working.c: In function 'udp_server_task':
D:/git/ESPIDF-UDP2DMX/main/main-1channel-working.c:189:19: warning: unused variable 'arg3' [-Wunused-variable]
  189 |             char *arg3 = strtok(NULL, "#");
      |                   ^~~~
ninja: build stopped: subcommand failed.
